app/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: instaclone
  labels:
    name: instaclone
    environment: production
    app.kubernetes.io/name: instaclone
